# online_chess

./: CMakeLists.txt  README.md
client/: asyncserverplayer.cpp  asyncserverplayer.hpp  chess_client.cpp
engine/: aiplayer.h  asyncaiplayer.cpp  asyncaiplayer.h  asyncgame.cpp  asyncgame.h  asynconlineplayer.cpp  asynconlineplayer.h  asyncplayer.cpp  asyncplayer.h  chessboard.h  global.h
server/: asyncclientplayer.cpp  asyncclientplayer.hpp  chess_server.cpp  server.cpp  server.hpp
